--- a/style.css
+++ b/style.css
@@ -53,3 +53,12 @@ button {
 button:hover {
     opacity: .7;
 }
+
+.error {
+    background: #f2dede;
+    color: #a94442;
+    padding: 10px;
+    width: 95%;
+    border-radius: 5px;
+    margin: 20px auto;
+}
