--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
     height: 100vh;
 }
 
@@ -61,4 +62,25 @@ button:hover {
     width: 95%;
     border-radius: 5px;
     margin: 20px auto;
+}
+
+h1 {
+    text-align: center;
+    color: #fff;
+}
+
+a {
+    float: right;
+    background: #555;
+    padding: 10px 15px;
+    color: #fff;
+    border-radius: 5px;
+    margin-right: 10px;
+    cursor: pointer;
+    border: none;
+    text-decoration: none;
+}
+
+a:hover {
+    opacity: .7;
 }
